tests/src/frontend/typechecking/exhaustiveness/invalid/many_parents_overrides_named_dead_pat1.sk
base class Top
base class P1{p1: Int} extends Top
base class P2{p2: Int} extends Top
base class P3{p3: Int} extends Top
base class P4{p4: Int} extends Top

base class SP1{sp1: Bool} extends P1
base class SP2{sp2: String} extends P2
base class SP3{sp3: Int} extends P3
base class SP4{sp4: Char} extends P4

class Join{j: String} extends SP1, SP2, SP3, SP4

fun myMatch(x: Top): String {
  x match {
  | Join{sp1 => true, sp2 => "b", sp3 => 3, sp4 => 'c'} -> "P"
  | Join{sp1 => false, sp2 => "b", sp3 => 3, sp4 => 'c'} -> "a"
  | Join{j => "a", sp2 => "b", sp3 => 3, sp4 => 'c'} -> "s1"
  | Join{sp2 => "c"} -> "s2"
  | P1 _ -> "\n"
  }
}
